// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BarChart should render background correctly 1`] = `
<svg
  height="0.25rem"
  preserveAspectRatio="none"
  viewBox="0 0 20 20"
  width="100%"
>
  <rect
    fill="#123456"
    height="20"
    width="20"
    x="0"
    y="0"
  />
  <rect
    fill="var(--accent)"
    height="20"
    width={2.4}
    x="0"
    y="0"
  />
</svg>
`;

exports[`BarChart should render correctly 1`] = `
<svg
  height="0.25rem"
  preserveAspectRatio="none"
  viewBox="0 0 20 20"
  width="100%"
>
  <rect
    fill="var(--bg)"
    height="20"
    width="20"
    x="0"
    y="0"
  />
  <rect
    fill="var(--accent)"
    height="20"
    width={2}
    x="0"
    y="0"
  />
</svg>
`;

exports[`BarChart should render foreground correctly 1`] = `
<svg
  height="0.25rem"
  preserveAspectRatio="none"
  viewBox="0 0 20 20"
  width="100%"
>
  <rect
    fill="var(--bg)"
    height="20"
    width="20"
    x="0"
    y="0"
  />
  <rect
    fill="#789456"
    height="20"
    width={3.5999999999999996}
    x="0"
    y="0"
  />
</svg>
`;

exports[`BarChart should render height correctly 1`] = `
<svg
  height="100px"
  preserveAspectRatio="none"
  viewBox="0 0 20 20"
  width="100%"
>
  <rect
    fill="var(--bg)"
    height="20"
    width="20"
    x="0"
    y="0"
  />
  <rect
    fill="var(--accent)"
    height="20"
    width={3}
    x="0"
    y="0"
  />
</svg>
`;

exports[`BarChart should render width correctly 1`] = `
<svg
  height="0.25rem"
  preserveAspectRatio="none"
  viewBox="0 0 20 20"
  width="100px"
>
  <rect
    fill="var(--bg)"
    height="20"
    width="20"
    x="0"
    y="0"
  />
  <rect
    fill="var(--accent)"
    height="20"
    width={19.8}
    x="0"
    y="0"
  />
</svg>
`;
